--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@upstash/ratelimit": "^0.1.5",
     "@upstash/redis": "^1.19.1",
     "@vercel/analytics": "^0.1.6",
+    "flowbite": "^1.6.6",
     "framer-motion": "^8.2.4",
     "next": "latest",
     "nsfwjs": "^2.4.2",
@@ -30,6 +31,8 @@
     "@types/request-ip": "^0.0.37",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
