--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "uploader": "^3.3.0"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.12",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
